--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ para fondo oscuro: #dcdcdc
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     scroll-behavior: smooth;
 }
 header {
@@ -42,11 +43,73 @@ nav ul {
     background-color:#666666 ;
     padding: 1%;
 }
-body img{
-    width: 70px ;
+
+/* section{
+    height: 650px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 40px;
+    
+} */
+section img{
+    height: 60%;
+}
+section h2{
+    font-size: 50px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+section p{
+    margin-bottom: 15px;
 }
 /**************************clases**********************************/
+.logo{
+    width: 70px ;
+}
+.cta{
+display: inline-block;
+padding: 7px 0;
+width: 100px;
+border: 1px solid #fff;
+border-radius:  50px;
+text-align: center;
+text-decoration: none;
+color: #283773;
+background-color: white;
+}
+.modal-container{
+    opacity: 0;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.5) ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .modal{
+    width:40%;
+    height: 50%;
+    background-color: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    transition: transform 1s;
+    transform: translateY(0%);
+}
+.modal > img{
+    height: 50%;
+}
+.modal-close{
+    transform: translateY(-200%);
+}
+.uncont{
     display: grid;
     align-content: center;
     border: solid 0.5px rgba(53, 53, 53, 0.758);
