--- a/main.css
+++ b/main.css
@@ -4,25 +4,28 @@ fondo: #F2F2F2
 fondo oscuro: #666666
 para fondo oscuro: #dcdcdc
 */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 40px;
 }
-body{
+
+body {
     background-color: #F2F2F2;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
-footer{
+
+footer {
     background-color: #666666;
     display: flex;
     flex-direction: row;
@@ -31,68 +34,78 @@ footer{
     padding: 5px;
 
 }
-a{
+
+a {
     text-decoration: none;
-    color:  #dcdcdc ;
+    color: #dcdcdc;
 }
+
 nav ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     list-style: none;
-    background-color:#666666 ;
+    background-color: #666666;
     padding: 1%;
 }
 
-/* section{
+section {
     height: 650px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 0 40px;
-    
-} */
-section img{
+
+}
+
+section img {
     height: 60%;
 }
-section h2{
+
+section h2 {
     font-size: 50px;
     font-weight: 500;
     margin-bottom: 5px;
 }
-section p{
+
+section p {
     margin-bottom: 15px;
 }
+
 /**************************clases**********************************/
-.logo{
-    width: 70px ;
+.logo {
+    width: 70px;
 }
-.cta{
-display: inline-block;
-padding: 7px 0;
-width: 100px;
-border: 1px solid #fff;
-border-radius:  50px;
-text-align: center;
-text-decoration: none;
-color: #283773;
-background-color: white;
+
+.cta {
+    display: inline-block;
+    padding: 7px 0;
+    width: 100px;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    text-align: center;
+    text-decoration: none;
+    color: #283773;
+    background-color: white;
 }
-.modal-container{
+
+.modal-container {
     opacity: 0;
+    visibility: hidden;
     position: fixed;
     z-index: 1000;
     width: 100%;
     height: 100vh;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,0.5) ;
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.modal{
-    width:40%;
+
+.modal {
+    width: 40%;
     height: 50%;
     background-color: #fff;
     text-align: center;
@@ -102,38 +115,58 @@ background-color: white;
     position: relative;
     transition: transform 1s;
     transform: translateY(0%);
+    border-radius: 10px;
 }
-.modal > img{
+
+.modal>img {
     height: 50%;
 }
-.modal-close{
+
+.modal-close {
     transform: translateY(-200%);
 }
-.uncont{
+
+.close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background: #c44a4a;
+    color: #fff;
+    line-height: 25px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.uncont {
     display: grid;
     align-content: center;
     border: solid 0.5px rgba(53, 53, 53, 0.758);
-    min-width: 175px ;
+    min-width: 175px;
     margin: 5px;
     padding: 10px;
     justify-content: start;
     justify-items: start;
 
 }
-.tag{
+
+.tag {
     margin: 1px;
     padding: 2px;
-    background-color: gold ;
+    background-color: gold;
     border-style: unset;
 }
 
-.contenedor1{
+.contenedor1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin: 2%;
     justify-content: space-around;
 }
+
 .contenedor2 {
     display: flex;
     flex-direction: row;
@@ -141,9 +174,51 @@ background-color: white;
     justify-content: space-around;
 }
 
-.miniCont{
+.miniCont {
     margin: 2%;
 }
-.miniCont h3{
+
+.miniCont h3 {
     align-self: center;
+}
+
+/*****************media queries***********************/
+
+@media screen and (max-width:1000px) {
+    section {
+        flex-direction: column-reverse;
+        /* align-content: center; */
+    }
+
+    section>img {
+        height: 40%;
+    }
+
+    .modal-texto {
+        text-align: center;
+    }
+
+    section h2 {
+        font-size: 25px;
+    }
+
+    section p {
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    section {
+        flex-direction: column-reverse;
+        /* align-content: center; */
+    }
+
+    section>img {
+        height: 25%;
+    }
+
+    .modal img {
+        height: 30%;
+    }
+
 }
